c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/extra_credit/goto_shared_name.c
/* The same identifier can be used
 * in the same scope as both a function name and a label */
int foo(void) {
    goto foo;
    return 0;
    foo:
        return 1;
}

int main(void) {
    return foo();
}